--- a/gallery/assets/css/style.css
+++ b/gallery/assets/css/style.css
@@ -22,26 +22,38 @@ a {
 #modal-overlay{
 	width: 100%;
 	height: 100%;
-	opacity: .5;
+	opacity: .9;
 	background: rgba(0, 0, 0, 0.5); 
+	position: fixed;
 } 
 
 #modal-box{
-	width: 500px;
-	height: auto;
+	width: 700px;
 	z-index: 100;
+	position: absolute;
 	margin: 0 auto;
 	display: block;
 	position: relative;
-	top: 50%
-	transform: translateY(-50%);
+	margin-top: 100px;
 }
 
 .modal-img{
-	width: 500px;
-	height: auto;
-	position: fixed;
+	max-width: 700px;
+	max-height: 600px;
+	position: relative;
+	display: block;
+	margin: 0 auto;
 } 
+
+#cancel{
+	position: absolute;
+	opacity: .7;
+	width: 50px;
+	cursor: pointer;
+	z-index: 10;
+	top: 0;
+	left: 0;
+}
 
 #grid{
 	height: 100%;
